tests/fail/d005_dup_fnonce.dew
# D005: dup on FnOnce closure (captures affine Box)
def main = fn () {
    def b = box(42);
    def reader = fn (x: Int) { unbox(b) };
    dup(reader)
}
